# Scientific-research-assistant

./: .env.example  .gitignore  Makefile  Modelfile  README.md  check_pages.py  main.py  pyproject.toml  test_extraction_output.md
app/: main.py
app/config/: data.yaml
app/schemas/: chunk.py  paper.py  search.py  upload.py
app/service/: chroma_service.py  document_service.py  embedding_service.py  parsing.ipynb  parsing_service.py
config/: dataset_config.yaml
data/: QA_Dataset_Generator.ipynb  dataset.jsonl  eval_report.json  kaggle.json  metadata.jsonl
dataset/: arxiv_downloader.py  dataset_builder.py  retrieval_simulator.py
dataset_builder/: __init__.py  arxiv_downloader.py  build_dataset.py  dataset_builder.py  qa_generator.py  retrieval_simulator.py
evaluation/: evaluate_search.ipynb
frontend/: README.md  index.html  install_node.sh  metadata.json  package-lock.json  package.json  server.ts  vite.config.js
img/: Dataset-Generation-Pipeline.excalidraw  sys-archi.excalidraw  system-architecture.excalidraw
notebook/: Kaggle_vLLM_Evaluation.ipynb  QA_Dataset_Generator.ipynb  QA_generated_finetune.ipynb  ResearchOS_dataset.ipynb  ResearchOS_ngrok.ipynb  colab_dataset_builder.ipynb  finetune.ipynb  kaggle-vllm-evaluation.ipynb
prompt/: answer_validator_prompt.py  question_validator_prompt.py  rag_prompt.py  router_prompt.py
researchrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schemas/: chunk.py  rag.py  section.py
scripts/: parsing.py
service/: chroma_service.py  chunking.py  document_service.py  embedding_service.py  llm_service.py  rag_service.py
utils/: processing_pdf.py
(+7 files in other folders)
