[project]
name = "researchrag"
version = "0.1.0"
description = "Research - AI scientific paper assistant with RAG and LangGraph"
requires-python = ">=3.11"
dependencies = [
    "python-multipart>=0.0.29",
    "pydantic>=2.8.0",
    "pymupdf>=1.24.0",
    "datasets>=2.20.0",
    "huggingface-hub>=0.23.0",
    "python-dotenv>=1.0.1",
    "doclayout-yolo>=0.0.2",
    "ultralytics>=8.3.0",
    "python-multipart>=0.0.29",
    "openai>=1.0.0",
    # Feature Engineering
    "chromadb>=1.0.0",
    "qdrant-client>=1.8.0",
    "langchain>=1.3.4",
    # Inference
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "chromadb>=1.5.9",
    "langchain-text-splitters>=1.1.2",
    "tiktoken>=0.13.0",
]

